--- a/temp1.html
+++ b/temp1.html
@@ -58,10 +58,7 @@
 
     .btn2 {
       background-color: mediumaquamarine;
-      padding: 12px;
-      padding-left: 30px;
-      padding-right: 30px;
-      font-size: 16px;
+      font-size: 30px;
     }
 
     .btn {
@@ -96,8 +93,8 @@
 <body>
   <div class="desert">
     <div class="container">
-      <img src="https://i0.wp.com/i.pinimg.com/originals/ac/37/d7/ac37d715c5598a80d00cf910516d9a62.jpg?resize=1500h="
-        alt="background" style="width:100%; height:700px; margin: auto;justify-content: center;">
+      <img src="desert.jpeg"
+        alt="background" style="width:100%; height:900px; margin: auto;justify-content: center;">
       <div class="content" style="align-items: center;">
         <img src="logo.jpg" alt="logo" width="25%" height="50px">
         <ul class="list-inline" style="padding-top:50px;padding-bottom:40px;font-size: 20px;">
@@ -111,19 +108,17 @@
         <p class="text-center" style="padding-top:10px;padding-bottom:50px;font-size: 20px;"> <b>------------------JUST
             FOR YOU ON THEME
             FOREST-------------------</b></p>
-        <button class="button button2 btn2" style="margin-top: 15px;padding-top:10px;padding-bottom:10px"><b>GET YOUR
-            COPY
-            NOW</b></button>
-      </div>
+        <button class="button button2 btn2" style="margin-top: 15px;padding:20px 50px;"><b>GET YOUR COPY NOW</b></button>
+      </div> 
     </div>
 
-    <div class="row" style="width:80%;display: flex;margin-left: 13%;">
+    <div class="row" style="width:80%;display: flex;padding-top:90px;padding-bottom: 10px;margin-left: 25%;">
       <a href="#"><i class="fas fa-user-friends"
-          style="text-align:center;display:block;font-size:70px;color:mediumaquamarine;margin-left: 90px;padding:90px 80px;"></i></a>
+          style="text-align:center;display:block;font-size:60px;color:mediumaquamarine;margin-right:260px;"></i></a>
       <a href="#"><i class="far fa-heart"
-          style="text-align:center;display:block;font-size:70px;color:mediumaquamarine;margin-left: 90px;padding:90px 80px;"></i></a>
+          style="text-align:center;display:block;font-size:60px;color:mediumaquamarine;margin-right: 260px;"></i></a>
       <a href="#"> <i class="fas fa-headphones-alt"
-          style="text-align:center;display:block;font-size:70px;color:mediumaquamarine;margin-left: 90px;padding:90px 80px; "></i>
+          style="text-align:center;display:block;font-size:60px;color:mediumaquamarine;"></i>
       </a>
     </div>
     <div class="row" style="width:80%;display: flex;padding-bottom: 20px;margin-left: 22%;">
@@ -135,7 +130,7 @@
     <div class="row1" style="width:90%;margin:auto; display: flex;">
       <div class="container" style="margin-left: 14%">
         <div class="well" style="width: 250px;height:200px;font-size: 20px;padding-top: 50px;">
-          <p class="para" style="text-align:center;">Lorem ipsum donec id </p>
+          <p class="para">Lorem ipsum donec id </p>
           <p class="para" style="text-align:center;"> gravida at eget metus.</p>
         </div>
       </div>
@@ -175,7 +170,7 @@
         </div>
 
         <div class="container" style="width:400px;margin-right: 21%;">
-          <div class="well" style="width: 450px;height:200px;font-size: 20px;padding-top: 50px;justify-content: center;">
+          <div class="well" style="width: 450px;height:200px;font-size: 20px;padding-top: 50px;">
             <p class="para">Ut enim ad minim veniam, quis nostrud</p>
             <p class="para">exercitation ullamco laboris...</p>
             <button class="button button1 btn" style="margin-top: 15px;">Read more</button>
